--- a/Auth/src/main/resources/templates/login.html
+++ b/Auth/src/main/resources/templates/login.html
@@ -44,6 +44,10 @@
                         required=""
                     />
                 </p>
+                <p>
+                    <input type="checkbox" id="remember-me" name="remember-me"/>
+                    <label for="remember-me">Remember Me</label>
+                </p>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
                 <a class="signup-btn" href="join">Sign up</a>
             </form>
