--- a/Auth/src/main/resources/templates/login.html
+++ b/Auth/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
                     <label for="remember-me">Remember Me</label>
                 </p>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                <a class="signup-btn" href="join">Sign up</a>
+                <p>Do not have an account yet ? <a class="signup-btn" href="register">Register</a></p>
             </form>
 
         </div>
