--- a/Auth/src/main/resources/templates/register.html
+++ b/Auth/src/main/resources/templates/register.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div class="container">
-            <form class="form-signin" method="post" action="signup">
+            <form class="form-signin" method="post" action="sign_up">
                 <h2 class="form-signin-heading">Create an account</h2>
                 <p>
                     <label for="username" class="sr-only">Username</label>
