add Client Edit UI

--- a/Auth/src/main/resources/templates/home.html
+++ b/Auth/src/main/resources/templates/home.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <div th:replace="fragments/header :: header"></div>
+    <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
