--- a/Auth/src/main/resources/templates/clients.html
+++ b/Auth/src/main/resources/templates/clients.html
@@ -10,6 +10,9 @@
 <body>
     <div th:replace="fragments/header :: header"></div>
     <div class="container">
+        <div class="my-2">
+            <a role="button" class="btn btn-primary" th:href="@{/new-client}">New Client</a>
+        </div>
         <table class="table table-striped">
             <thead>
             <tr>
