--- a/Auth/src/main/resources/templates/fragments/header.html
+++ b/Auth/src/main/resources/templates/fragments/header.html
@@ -48,9 +48,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="setting"
+                    <a href="#"
                        class="nav-link"
-                       th:href="@{/setting}">
+                       th:href="@{#}">
                         Setting
                     </a>
                 </li>
