--- a/Auth/src/main/resources/templates/home.html
+++ b/Auth/src/main/resources/templates/home.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div th:replace="fragments/header :: header"></div>
+    <div class="container">
+        <div class="d-flex justify-content-between">
+            <h5> User Logged In</h5>
+            <h5 th:text="${loggedInCount}">-</h5>
+        </div>
+    </div>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
