--- a/Auth/src/main/resources/templates/users.html
+++ b/Auth/src/main/resources/templates/users.html
@@ -10,23 +10,54 @@
 <body>
     <div th:replace="fragments/header :: header"></div>
     <div class="container">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">UserName</th>
-                <th scope="col">NickName</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="user,iterStat : ${users}">
-                <td scope="row" th:text="${iterStat.count}">-</td>
-                <td th:text="${user.getUserName()}">-</td>
-                <td th:text="${user.getNickName()}">-</td>
-            </tr>
-            </tbody>
-        </table>
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="user-tab" data-toggle="tab" href="#user-pane" role="tab" aria-controls="user-pane" aria-selected="true">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="logged-tab" data-toggle="tab" href="#logged-pane" role="tab" aria-controls="logged-pane" aria-selected="false">Logged</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="user-pane" role="tabpanel" aria-labelledby="user-tab">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">UserName</th>
+                        <th scope="col">NickName</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user,iterStat : ${users}">
+                        <td scope="row" th:text="${iterStat.count}">-</td>
+                        <td th:text="${user.getUserName()}">-</td>
+                        <td th:text="${user.getNickName()}">-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="logged-pane" role="tabpanel" aria-labelledby="logged-tab">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">UserName</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="userName,iterStat : ${loggedUsers}">
+                        <td scope="row" th:text="${iterStat.count}">-</td>
+                        <td th:text="${userName}">-</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </html>
