--- a/Auth/src/main/resources/templates/home.html
+++ b/Auth/src/main/resources/templates/home.html
@@ -14,6 +14,27 @@
             <h5> User Logged In</h5>
             <h5 th:text="${loggedInCount}">-</h5>
         </div>
+        <div class="my-2">
+            <h5>IP login attempts</h5>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">IP</th>
+                    <th scope="col">Count</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="ip, itrStat : ${loginIP}">
+                    <td scope="row" th:text="${itrStat.count}">-</td>
+                    <td scope="row" th:text="${ip.key}">-</td>
+                    <td scope="row" th:text="${ip.value}">-</td>
+                    <td scope="row"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
