--- a/Auth/src/main/resources/templates/new-client.html
+++ b/Auth/src/main/resources/templates/new-client.html
@@ -14,6 +14,9 @@
             <label for="clientId" class="col-sm-2 col-form-label">Client Id</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="clientId" placeholder="ClinetId"
+                       required="required"
+                       pattern="([A-z]|[0-9]|_|@){3,}"
+                       title="Minimum length is 3 characters or number or _ @"
                        name="clientId">
             </div>
         </div>
@@ -21,6 +24,9 @@
             <label for="clientSecret" class="col-sm-2 col-form-label">Client Secret</label>
             <div class="col-sm-10">
                 <input type="password" class="form-control" id="clientSecret" placeholder="Client Secret"
+                       required="required"
+                       pattern=".{8,}"
+                       title="Minimum length is 8 characters"
                        name="clientSecret">
             </div>
         </div>
