--- a/Auth/src/main/resources/templates/register.html
+++ b/Auth/src/main/resources/templates/register.html
@@ -5,60 +5,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Please sign up</title>
+        <title th:text="#{register.title}">Please sign up</title>
+        <link href="/webjars/bootstrap/css/bootstrap.min.css"
+              th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
+              rel="stylesheet" media="screen" />
         <link
-            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-            crossorigin="anonymous"
-        />
-        <link
-            href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css"
-            rel="stylesheet"
-            crossorigin="anonymous"
+                href="sign.css"
+                rel="stylesheet"
         />
     </head>
     <body>
         <div class="container">
             <form class="form-signin" method="post" action="sign_up">
-                <h2 class="form-signin-heading">Create an account</h2>
+                <h2 class="form-signin-heading" th:text="#{register.formtitle}">Create an account</h2>
                 <p>
-                    <label for="username" class="sr-only">Username</label>
+                    <label for="username" class="sr-only" th:text="#{register.username}">Username</label>
                     <input
                         type="text"
                         id="username"
                         name="username"
                         class="form-control"
-                        placeholder="Username"
                         required=""
                         autofocus=""
+                        th:placeholder="#{register.username}"
                     />
                 </p>
                 <p>
-                    <label for="email" class="sr-only">Email</label>
+                    <label for="email" class="sr-only" th:text="#{register.email}">Email</label>
                     <input
                             type="email"
                             id="email"
                             name="email"
                             class="form-control"
-                            placeholder="Email"
                             required="required"
+                            th:placeholder="#{register.email}"
                     />
                 </p>
                 <p>
-                    <label for="password" class="sr-only">Password</label>
+                    <label for="password" class="sr-only" th:text="#{register.password}">Password</label>
                     <input
                             type="password"
                             id="password"
                             name="password"
                             class="form-control"
-                            placeholder="Password - minimum length 8 characters"
                             required="required"
                             pattern=".{8,}"
-                            title="Minimum length is 8 characters"
+                            th:placeholder="#{register.password.placeholder}"
+                            th:title="#{register.password.placeholder}"
                     />
                 </p>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{register.signup}">创建</button>
             </form>
         </div>
     </body>
